--- a/DetectorConsole/src/main/resources/com/tester/View.fxml
+++ b/DetectorConsole/src/main/resources/com/tester/View.fxml
@@ -50,6 +50,7 @@
 				<Insets top="25" right="25" bottom="25" left="25" />
 			</padding>
 			<Button fx:id="cameraButton" alignment="center" text="Start camera" onAction="#startCamera" />
+			<Button fx:id="openVideoButton" alignment="center" text="Open Video" onAction="#openVideo" />
 			<Separator />
 			<Label fx:id="hsvCurrentValues" />
 			<Label fx:id="instructionsValues" />
